--- a/datawhale/02位运算.md
+++ b/datawhale/02位运算.md
@@ -1,1 +1,200 @@
+# 条件循环  和java的差别
+
+练习题  
+1)编写一个Python程序来查找那些既可以被7整除又可以被5整除的数字，介于1500和2700之间。 
+*def num()
+ res = []
+ for num in range(1500,2701):
+  if(num%7==0 and num%5==0)
+    res.apped(num)
+ return res*
+2)龟兔赛跑游戏  
+题目描述：  
+话说这个世界上有各种各样的兔子和乌龟，但是研究发现，所有的兔子和乌龟都有一个共同的特点——喜欢赛跑。于是世界上各个角落都不断在发生着乌龟和兔子的比赛，小华对此很感兴趣，于是决定研究不同兔 子和乌龟的赛跑。他发现，兔子虽然跑比乌龟快，但它们有众所周知的毛病——骄傲且懒惰，于是在与乌龟的比赛中，一旦任一秒结束后兔子发现自己领先t米或以 上，它们就会停下来休息s秒。对于不同的兔子，t，s的数值是不同的，但是所有的乌龟却是一致——它们不到终点决不停止。  
+然而有些比赛相当漫长，全程观看会耗费大量时间，而小华发现只要在每场比赛开始后记录下兔子和乌龟的数据——兔子的速度v1（表示每秒兔子能跑v1 米），乌龟的速度v2，以及兔子对应的t，s值，以及赛道的长度l——就能预测出比赛的结果。但是小华很懒，不想通过手工计算推测出比赛的结果，于是他找 到了你——清华大学计算机系的高才生——请求帮助，请你写一个程序，对于输入的一场比赛的数据v1，v2，t，s，l，预测该场比赛的结果。  
+输入:  
+输入只有一行，包含用空格隔开的五个正整数v1，v2，t，s，l，其中(v1,v2< =100;t< =300;s< =10;l< =10000且为v1,v2的公倍数)  
+输出:  
+输出包含两行，第一行输出比赛结果——一个大写字母“T”或“R”或“D”，分别表示乌龟获胜，兔子获胜，或者两者同时到达终点。  
+第二行输出一个正整数，表示获胜者（或者双方同时）到达终点所耗费的时间（秒数）。  
+
+样例输入：
+10 5 5 2 20  
+
+样例输出  
+D
+4
+
+
+
+
+## 1.if - else 语句：注意冒号     
+Eg：  
+if expression:
+    expr_true_suite
+else:
+    expr_false_suite
+## 2.if - elif - else 语句   
+elif 语句即为 else if，用来检查多个表达式是否为真，并在为真时执行特定代码块中的代码。 
+Eg:  
+if 100 >= source >= 90:  
+    print('A')  
+elif 90 > source >= 80:   
+    print('B')  
+elif 80 > source >= 60:  
+    print('C')  
+elif 60 > source >= 0:  
+    print('D')  
+else:
+    print('输入错误！')
+## 3. assert 关键词:  
+assert这个关键词我们称之为“断言”，当这个关键词后边的条件为 False 时，程序自动崩溃并抛出AssertionError的异常。
+在进行单元测试时，可以用来在程序中置入检查点，只有条件为 True 才能让程序正常工作。  
+## 4.while 循环
+while循环的代码块会一直循环执行，直到布尔表达式的值为布尔假。  
+如果布尔表达式不带有<、>、==、！=、in、not in等运算符，仅仅给出数值之类的条件，也是可以的。当while后写入一个非零整数时，视为真值，执行循环体；写入0时，视为假值，不执行循环体。也可以写入str、list或任何序列，长度非零则视为真值，执行循环体；否则视为假值，不执行循环体。  
+## 5.while - else 循环  
+Eg:   
+while 布尔表达式:  
+    代码块  
+else:  
+    代码块  
+## 6.for 循环  
+当for循环正常执行完的情况下，执行else输出，如果for循环中执行了跳出循环的语句，比如 break，将不执行else代码块的内容，与while - else语句一样。  
+## 7.ange() 函数
+range([start,] stop[, step=1])  
+这个BIF（Built-in functions）有三个参数，其中用中括号括起来的两个表示这两个参数是可选的。   
+step=1 表示第三个参数的默认值是1。  
+range 这个BIF的作用是生成一个从start参数的值开始到stop参数的值结束的数字序列，该序列包含start的值但不包含stop的值。  
+## 8.enumerate()函数
+enumerate(sequence, [start=0])  
+sequence -- 一个序列、迭代器或其他支持迭代对象。  
+start -- 下标起始位置。  
+返回 enumerate(枚举) 对象  
+Eg:  
+seasons = ['Spring', 'Summer', 'Fall', 'Winter']  
+lst = list(enumerate(seasons))  
+print(lst)  
+# [(0, 'Spring'), (1, 'Summer'), (2, 'Fall'), (3, 'Winter')]  
+lst = list(enumerate(seasons, start=1))  # 下标从 1 开始  
+print(lst)  
+# [(1, 'Spring'), (2, 'Summer'), (3, 'Fall'), (4, 'Winter')]  
+## 9.enumerate()与 for 循环的结合使用
+for i, a in enumerate(A)  
+    do something with a    
+用 enumerate(A) 不仅返回了 A 中的元素，还顺便给该元素一个索引值 (默认从 0 开始)。此外，用 enumerate(A, j) 还可以确定索引起始值为 j。  
+【例子】  
+languages = ['Python', 'R', 'Matlab', 'C++']  
+for language in languages:  
+    print('I love', language)  
+print('Done!')  
+
+'''  
+I love Python  
+I love R  
+I love Matlab  
+I love C++  
+Done!  
+'''
+
+for i, language in enumerate(languages, 2):  
+    print(i, 'I love', language)  
+print('Done!')  
+
+'''
+2 I love Python  
+3 I love R  
+4 I love Matlab  
+5 I love C++  
+Done!  
+'''
+## 10. pass 语句
+pass 语句的意思是“不做任何事”，如果你在需要有语句的地方不写任何语句，那么解释器会提示出错，而 pass 语句就是用来解决这些问题的。  
+pass是空语句，不做任何操作，只起到占位的作用，其作用是为了保持程序结构的完整性。尽管pass语句不做任何操作，但如果暂时不确定要在一个位置放上什么样的代码，可以先放置一个pass语句，让代码可以正常运行。  
+## 11.推导式
+### 11.1 列表推导式  
+[ expr for value in collection [if condition] ]      
+【例子】  
+x = [-4, -2, 0, 2, 4]  
+y = [a * 2 for a in x]  
+print(y)    
+# [-8, -4, 0, 4, 8]  
+【例子】  
+x = [i ** 2 for i in range(1, 10)]  
+print(x)  
+# [1, 4, 9, 16, 25, 36, 49, 64, 81]  
+【例子】  
+x = [(i, i ** 2) for i in range(6)]  
+print(x)  
+# [(0, 0), (1, 1), (2, 4), (3, 9), (4, 16), (5, 25)]  
+
+【例子】  
+x = [i for i in range(100) if (i % 2) != 0 and (i % 3) == 0]  
+print(x)  
+# [3, 9, 15, 21, 27, 33, 39, 45, 51, 57, 63, 69, 75, 81, 87, 93, 99]  
+
+【例子】  
+a = [(i, j) for i in range(0, 3) for j in range(0, 3)]  
+print(a)  
+# [(0, 0), (0, 1), (0, 2), (1, 0), (1, 1), (1, 2), (2, 0), (2, 1), (2, 2)]
+
+【例子】  
+x = [[i, j] for i in range(0, 3) for j in range(0, 3)]
+print(x)
+# [[0, 0], [0, 1], [0, 2], [1, 0], [1, 1], [1, 2], [2, 0], [2, 1], [2, 2]]
+
+x[0][0] = 10
+print(x)
+# [[10, 0], [0, 1], [0, 2], [1, 0], [1, 1], [1, 2], [2, 0], [2, 1], [2, 2]]
+
+【例子】
+a = [(i, j) for i in range(0, 3) if i < 1 for j in range(0, 3) if j > 1]
+print(a)
+# [(0, 2)]
+
+### 11.2元组推导式
+( expr for value in collection [if condition] )
+【例子】
+a = (x for x in range(10))  
+print(a)  
+# <generator object <genexpr> at 0x0000025BE511CC48>  
+print(tuple(a))  
+# (0, 1, 2, 3, 4, 5, 6, 7, 8, 9)  
+
+### 11.3字典推导式
+{ key_expr: value_expr for value in collection [if condition] }  
+【例子】  
+
+b = {i: i % 2 == 0 for i in range(10) if i % 3 == 0}  
+print(b)  
+# {0: True, 3: False, 6: True, 9: False}    
+### 11.4集合推导式  
+{ expr for value in collection [if condition] }  
+【例子】  
+c = {i for i in [1, 2, 3, 4, 5, 5, 6, 4, 3, 2, 1]}  
+print(c)  
+# {1, 2, 3, 4, 5, 6}
+ 
+### 11.5其它  
+d = 'i for i in "I Love Lsgogroup"'  
+print(d)  
+# i for i in "I Love Lsgogroup"  
+
+e = (i for i in range(10))
+print(e)
+# <generator object <genexpr> at 0x0000007A0B8D01B0>  
+
+print(next(e))  # 0  
+print(next(e))  # 1  
+
+for each in e:  
+    print(each, end=' ')  
+
+# 2 3 4 5 6 7 8 9
+
+s = sum([i for i in range(101)])   
+print(s)  # 5050  
+s = sum((i for i in range(101)))  
+print(s)  # 5050  
+
 
