--- a/datawhale/03异常处理.md
+++ b/datawhale/03异常处理.md
@@ -35,8 +35,8 @@ try:
 except OSError as error:  
     print('打开文件出错\n原因是：' + str(error))  
 #打开文件出错  
-#原因是：[Errno 2] No such file or directory: 'test.txt'  
-一个try语句可能包含多个except子句，分别来处理不同的特定的异常。最多只有一个分支会被执行。*
+#原因是：[Errno 2] No such file or directory: 'test.txt' * 
+一个try语句可能包含多个except子句，分别来处理不同的特定的异常。最多只有一个分支会被执行。
 
 *【例子】  
 try:  
@@ -52,7 +52,7 @@ except TypeError as error:
 except ValueError as error:  
     print('数值出错\n原因是：' + str(error))  
 #数值出错  
-#原因是：invalid literal for int() with base 10: 'abc'  
+#原因是：invalid literal for int() with base 10: 'abc' * 
 
 *【例子】
 dict1 = {'a': 1, 'b': 2, 'v': 22}  
@@ -64,7 +64,7 @@ except KeyError:
     print('键错误')  
 else:  
     print(x)  
-#查询错误  
+#查询错误*  
 try-except-else语句尝试查询不在dict中的键值对，从而引发了异常。这一异常准确地说应属于KeyError，但由于KeyError是LookupError的子类，且将LookupError置于KeyError之前，因此程序优先执行该except代码块。所以，使用多个except代码块时，必须坚持对其规范排序，要从最具针对性的异常到最通用的异常。  
 
 *【例子】
@@ -77,7 +77,7 @@ except LookupError:
     print('查询错误')  
 else:  
     print(x)  
-#键错误  
+#键错误*  
 
 *【例子】一个 except 子句可以同时处理多个异常，这些异常将被放在一个括号里成为一个元组。
 try:  
@@ -89,7 +89,7 @@ try:
 except (OSError, TypeError, ValueError) as error:  
     print('出错了！\n原因是：' + str(error))  
 #出错了！  
-#原因是：unsupported operand type(s) for +: 'int' and 'str'  
+#原因是：unsupported operand type(s) for +: 'int' and 'str' * 
 
 ### 2.2try - except - finally 语句
 try:  
@@ -113,14 +113,14 @@ def divide(x, y):
         print("executing finally clause")  
 
 divide(2, 1)  
-# result is 2.0  
-# executing finally clause  
+#result is 2.0  
+#executing finally clause  
 divide(2, 0)  
-# division by zero!  
-# executing finally clause  
+#division by zero!  
+#executing finally clause  
 divide("2", "1")  
-# executing finally clause  
-# TypeError: unsupported operand type(s) for /: 'str' and 'str'  
+#executing finally clause  
+#TypeError: unsupported operand type(s) for /: 'str' and 'str' * 
 
 ### 2.3 try - except - else 语句    
 如果在try子句执行时没有发生异常，Python将执行else语句后的语句。  
@@ -139,7 +139,7 @@ except(Exception1[, Exception2[,...ExceptionN]]]):
 else:  
     如果没有异常执行这块代码  
 
-*【例子】  
+* 【例子】  
 try:  
     fh = open("testfile", "w")  
     fh.write("这是一个测试文件，用于测试异常!!")  
@@ -148,7 +148,7 @@ except IOError:
 else:  
     print("内容写入文件成功")  
     fh.close()  
-#内容写入文件成功  
+#内容写入文件成功*  
 注意：else语句的存在必须以except语句的存在为前提，在没有except语句的try语句中使用else语句，会引发语法错误。  
 
 ### 2.4 raise语句
@@ -159,4 +159,4 @@ try:
     raise NameError('HiThere')  
 except NameError:  
     print('An exception flew by!')    
-#An exception flew by!  
+#An exception flew by!  *
