--- a/datawhale/03异常处理.md
+++ b/datawhale/03异常处理.md
@@ -18,16 +18,16 @@ try 语句按照如下方式工作：
 如果没有异常发生，忽略except子句，try子句执行后结束。  
 如果在执行try子句的过程中发生了异常，那么try子句余下的部分将被忽略。如果异常的类型和except之后的名称相符，那么对应的except子句将被执行。最后执行try语句之后的代码。  
 如果一个异常没有与任何的except匹配，那么这个异常将会传递给上层的try中。  
-*【例子】  
+* 【例子】  
 try:
     f = open('test.txt')  
     print(f.read())  
     f.close()  
 except OSError:  
     print('打开文件出错')  
-#打开文件出错  *
+#打开文件出错  
 
-*【例子】  
+* 【例子】  
 try:   
     f = open('test.txt')  
     print(f.read())  
@@ -35,10 +35,10 @@ try:
 except OSError as error:  
     print('打开文件出错\n原因是：' + str(error))  
 #打开文件出错  
-#原因是：[Errno 2] No such file or directory: 'test.txt' * 
+#原因是：[Errno 2] No such file or directory: 'test.txt' 
 一个try语句可能包含多个except子句，分别来处理不同的特定的异常。最多只有一个分支会被执行。
 
-*【例子】  
+* 【例子】  
 try:  
     int("abc")  
     s = 1 + '1'  
@@ -52,9 +52,9 @@ except TypeError as error:
 except ValueError as error:  
     print('数值出错\n原因是：' + str(error))  
 #数值出错  
-#原因是：invalid literal for int() with base 10: 'abc' * 
+#原因是：invalid literal for int() with base 10: 'abc'    
 
-*【例子】
+* 【例子】
 dict1 = {'a': 1, 'b': 2, 'v': 22}  
 try:  
     x = dict1['y']  
@@ -64,10 +64,10 @@ except KeyError:
     print('键错误')  
 else:  
     print(x)  
-#查询错误*  
+#查询错误 
 try-except-else语句尝试查询不在dict中的键值对，从而引发了异常。这一异常准确地说应属于KeyError，但由于KeyError是LookupError的子类，且将LookupError置于KeyError之前，因此程序优先执行该except代码块。所以，使用多个except代码块时，必须坚持对其规范排序，要从最具针对性的异常到最通用的异常。  
 
-*【例子】
+* 【例子】
 dict1 = {'a': 1, 'b': 2, 'v': 22}   
 try:  
     x = dict1['y']  
@@ -77,9 +77,10 @@ except LookupError:
     print('查询错误')  
 else:  
     print(x)  
-#键错误*  
+#键错误 
 
-*【例子】一个 except 子句可以同时处理多个异常，这些异常将被放在一个括号里成为一个元组。
+* 【例子】  
+一个 except 子句可以同时处理多个异常，这些异常将被放在一个括号里成为一个元组。    
 try:  
     s = 1 + '1'  
     int("abc")  
@@ -89,7 +90,7 @@ try:
 except (OSError, TypeError, ValueError) as error:  
     print('出错了！\n原因是：' + str(error))  
 #出错了！  
-#原因是：unsupported operand type(s) for +: 'int' and 'str' * 
+#原因是：unsupported operand type(s) for +: 'int' and 'str' 
 
 ### 2.2try - except - finally 语句
 try:  
@@ -102,7 +103,7 @@ finally:
 不管try子句里面有没有发生异常，finally子句都会执行。  
 如果一个异常在try子句里被抛出，而又没有任何的except把它截住，那么这个异常会在finally子句执行后被抛出。  
 
-*【例子】
+* 【例子】
 def divide(x, y):  
     try:  
         result = x / y   
@@ -120,7 +121,7 @@ divide(2, 0)
 #executing finally clause  
 divide("2", "1")  
 #executing finally clause  
-#TypeError: unsupported operand type(s) for /: 'str' and 'str' * 
+#TypeError: unsupported operand type(s) for /: 'str' and 'str' 
 
 ### 2.3 try - except - else 语句    
 如果在try子句执行时没有发生异常，Python将执行else语句后的语句。  
@@ -148,15 +149,15 @@ except IOError:
 else:  
     print("内容写入文件成功")  
     fh.close()  
-#内容写入文件成功*  
+#内容写入文件成功 
 注意：else语句的存在必须以except语句的存在为前提，在没有except语句的try语句中使用else语句，会引发语法错误。  
 
 ### 2.4 raise语句
 Python 使用raise语句抛出一个指定的异常。  
 
-*【例子】
+* 【例子】
 try:  
     raise NameError('HiThere')  
 except NameError:  
     print('An exception flew by!')    
-#An exception flew by!  *
+#An exception flew by!  
