--- a/datawhale/04列表\元组\字符串.md
+++ b/datawhale/04列表\元组\字符串.md
@@ -1,1 +1,50 @@
-# 列表\元组\字符串
+# 列表\元组\字符串-与java相较  
+## 1.列表  
+完全和java不同  
+注意看all  
+
+### 1.1练习题  
+1)列表操作练习  
+列表lst 内容如下  
+lst = [2, 5, 6, 7, 8, 9, 2, 9, 9]  
+
+
+请写程序完成下列操作：  
+在列表的末尾增加元素15  
+![image](https://github.com/Inga20/python/blob/master/datawhale/1.png)  
+在列表的中间位置插入元素20   
+![image](https://github.com/Inga20/python/blob/master/datawhale/2.png)
+将列表[2, 5, 6]合并到lst中
+![image](https://github.com/Inga20/python/blob/master/datawhale/3.png)  
+移除列表中索引为3的元素  
+![image](https://github.com/Inga20/python/blob/master/datawhale/4.png)  
+翻转列表里的所有元素  
+![image](https://github.com/Inga20/python/blob/master/datawhale/5.png)  
+对列表里的元素进行排序，从小到大一次，从大到小一次  
+![image](https://github.com/Inga20/python/blob/master/datawhale/6.png)  
+
+2)修改列表  
+问题描述：  
+lst = [1, [4, 6], True]  
+请将列表里所有数字修改成原来的两倍  
+![image](https://github.com/Inga20/python/blob/master/datawhale/7.png)  
+
+3)leetcode 852题 山脉数组的峰顶索引  
+如果一个数组k符合下面两个属性，则称之为山脉数组
+数组的长度大于等于3  
+存在$i$，$i$ >0 且$i<\operatorname{len}(k)-1$， 使得$$\mathrm{k}[0]<\mathrm{k}[1]<\ldots<\mathrm{k}[\mathrm{i}-1]<\mathrm{k}[\mathrm{j}]>\mathrm{k}[\mathrm{i}+1] \ldots>\mathrm{k}[\operatorname{len}(\mathrm{k})-1]$$  
+这个$i$就是顶峰索引。  
+现在，给定一个山脉数组，求顶峰索引。  
+
+示例:    
+输入：[1, 3, 4, 5, 3]  
+输出：True  
+输入：[1, 2, 4, 6, 4, 5]  
+输出：False  
+
+class Solution:  
+def peakIndexInMountainArray(self, A: List[int]) -> int:  
+
+
+
+
