--- a/datawhale/04列表\元组\字符串.md
+++ b/datawhale/04列表\元组\字符串.md
@@ -45,6 +45,32 @@ lst = [1, [4, 6], True]
 class Solution:  
 def peakIndexInMountainArray(self, A: List[int]) -> int:  
 
+## 2.元组
+注意解压元组  
+1)元组概念  
+写出下面代码的执行结果和最终结果的类型  
+(1, 2)*2  
+* (1,2,1,2) 数据类型元组
+(1, )*2  
+* 结果（1，1），数据类型元组
+(1)*2 
+* 结果2，数据类型int
+分析为什么会出现这样的结果.  
+* 元组是整型的数据类型不同，操作符运算规则也不同  
+
+2)拆包过程是什么？  
+a, b = 1, 2  
+上述过程属于拆包吗？  
+* 属于
+可迭代对象拆包时，怎么赋值给占位符？  
+* 在进行解包的时候，我们并不总是对元组里所有的数据都感兴趣， _ 占位符能帮助处理这种情况，我们把不感兴趣的元组元素对应占位符，如下：  
+a,b,*_,c=1,2,3,4,5,6;则，3，4，5是我们不感兴趣的数据。
+
+
+
+## 3.字符串
+和java差不多
+
 
 
 
