--- a/datawhale/05字典、集合和序列.md
+++ b/datawhale/05字典、集合和序列.md
@@ -30,4 +30,20 @@ data = {
 各门课程的考试成绩存储方式并不相同，有的用字典，有的用列表，但是分数都是字符串类型，请实现函数transfer_score(score_dict)，将分数修改成int类型  
    
 def transfer_score(data):  
-    # your code here  
+    #your code here    
+
+## 2.集合  
+* 练习题  
+怎么表示只包含⼀个数字1的元组。  
+创建一个空集合，增加 {‘x’,‘y’,‘z’} 三个元素。  
+列表['A', 'B', 'A', 'B']去重。  
+求两个集合{6, 7, 8}，{7, 8, 9}中不重复的元素（差集指的是两个集合交集外的部分）。  
+求{'A', 'B', 'C'}中元素在 {'B', 'C', 'D'}中出现的次数。  
+
+## 3.序列  
+* 练习题  
+怎么找出序列中的最⼤、⼩值？  
+sort() 和 sorted() 区别  
+怎么快速求 1 到 100 所有整数相加之和？  
+求列表 [2,3,4,5] 中每个元素的立方根。  
+将[‘x’,‘y’,‘z’] 和 [1,2,3] 转成 [(‘x’,1),(‘y’,2),(‘z’,3)] 的形式。  
