--- a/datawhale/07类、对象与魔法方法.md
+++ b/datawhale/07类、对象与魔法方法.md
@@ -22,4 +22,4 @@
 ## 2.魔法方法
 ### 2.1上面提到了许多魔法方法，如__new__,__init__, __str__,__rstr__,__getitem__,__setitem__等等，请总结它们各自的使用方法。  
 
-### 2、利用python做一个简单的定时器类  
+### 2.2利用python做一个简单的定时器类  
